--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
     "dev": "deno run --watch main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "mongodb": "npm:mongodb@^6.11.0"
   }
 }
